02 JumpStart with Image Carousel

--- a/index.html
+++ b/index.html
@@ -12,39 +12,30 @@
   <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,700" rel="stylesheet">
 
 
-
-
 <!--  FOUR Style Sheets  -->
   <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!--
+<!-- Slick  -->
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     // Add the new slick-theme.css if you want the default styling
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
--->
 
   <link href="./resources/css/styles.css" type="text/css" rel="stylesheet">
 
 
-
-
-<!--  THREE JavaScript Files  -->
-<script
-  src="http://code.jquery.com/jquery-3.2.1.slim.min.js"
-  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
-  crossorigin="anonymous"></script>
+<!--  Two JavaScript Files  -->
+<script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
 
   <script src="./resources/js/main.js"></script>
 
-
-
-
-
-
-
 </head>
+
+
+
+
+
 <body>
 
 
@@ -102,11 +93,11 @@
 
 
 
-<!--
+
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
--->
+
 
 
 
