--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <!-- Slick  -->
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    // Add the new slick-theme.css if you want the default styling
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
   <link href="./resources/css/styles.css" type="text/css" rel="stylesheet">
 
 
 <!--  Two JavaScript Files  -->
+<!--
 <script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
-
+-->
   <script src="./resources/js/main.js"></script>
 
 </head>
@@ -37,7 +37,6 @@
 
 
 <body>
-
 
   <nav class = "navbar navbar-default navbar-fixed-top">
     <div class = "container">
@@ -93,11 +92,11 @@
 
 
 
-
+<!--
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script>
-
+-->
 
 
 
@@ -178,21 +177,8 @@
     <p>Inventor's block strkes at the worst of times. But that's all change with JumpStart's Good
       Idea Generator Lite (GIGLi).
     </p>
-    <a a href="#carousel"  class="btn btn-primary btn-lg">Learn More</a>
+    <a href="#carousel"  class="btn btn-primary btn-lg">Learn More</a>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
