--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 
 <!--  FOUR Style Sheets  -->
   <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
+  <!--
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+-->
+<link href="./resources/css/bootstrap.css" type="text/css" rel="stylesheet">
+
 <!-- Slick  -->
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
@@ -24,9 +28,12 @@
 
 
 <!--  Two JavaScript Files  -->
+<!--
 <script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
+-->
 
+  <script src="jquery-3.2.1.min.js"></script>
   <script src="./resources/js/main.js"></script>
 
 </head>
@@ -91,9 +98,12 @@
 
 
 
-
+<!--
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+-->
+
+
   <script type="text/javascript" src="slick/slick.min.js"></script>
 
 
